fix: scrollbar always displayed on safari (#327)
fixes #327

--- a/src/style.scss
+++ b/src/style.scss
@@ -336,10 +336,6 @@ footer {
   bottom: 0;
 }
 
-main {
-  min-height: calc(100% - 136px);
-}
-
 material-footer {
   padding: 0.5em 1em;
   li {
